# face_recognition

./: .gitignore  CMakeLists.txt  README.md
src/: .faceApi.h.swp  CMakeLists.txt  faceApi.cpp  faceApi.h  test.cpp
