set(BASE /home/test/kunlib)
add_definitions(-o3 -std=c++11)
include_directories(${BASE}/include /usr/local/include/opencv4)
link_directories(/usr/local/lib  ${BASE}/libs /usr/local/lib64/)
add_library(kunFace SHARED faceApi.cpp)
add_executable(face_recognition  test.cpp)
target_link_libraries(kunFace  opencv_dnn  opencv_core opencv_imgproc opencv_imgcodecs)
target_link_libraries(face_recognition  kunFace dlib  opencv_dnn  opencv_core opencv_imgproc opencv_imgcodecs pbase64)
