set(BASE /home/test/github/kunlib)
add_definitions(-o3 -std=c++11)
include_directories(/home/test/opencv3/include ${BASE}/include)
link_directories(/home/test/opencv3/lib ${BASE}/libs /usr/local/lib64/)
add_library(kunFace SHARED src/faceApi.cpp)
add_executable(face_recognition src/image_base64.cpp src/test.cpp)
target_link_libraries(kunFace dlib opencv_dnn  opencv_core opencv_imgproc opencv_imgcodecs)
target_link_libraries(face_recognition  pbase64 kunFace dlib  opencv_dnn  opencv_core opencv_imgproc opencv_imgcodecs)
