set(BASE /home/panghao/kunlib)
add_definitions(-o3 -std=c++11)
include_directories(${BASE}/include)
link_directories(/usr/local/lib64 ${BASE}/libs/opencv ${BASE}/libs)
add_library(kunFace SHARED faceApi.cpp)
add_executable(face_recognition  test.cpp)
target_link_libraries(kunFace dlib opencv_dnn  opencv_core opencv_imgproc opencv_imgcodecs)
target_link_libraries(face_recognition dlib kunFace   opencv_dnn  opencv_core opencv_imgproc opencv_imgcodecs)
