set(BASE /home/panghao/github/kunlib)
add_definitions(-o3 -std=c++11 -DUSE_AVX_INSTRUCTIONS=ON  -DUSE_SSE2_INSTRUCTIONS=ON -DUSE_SSE4_INSTRUCTIONS=ON)
include_directories(${BASE}/include)
link_directories(${BASE}/libs/opencv ${BASE}/libs /usr/local/lib64/)
add_library(kunFace SHARED src/faceApi.cpp)
add_executable(face_recognition  src/test.cpp)
target_link_libraries(kunFace dlib opencv_dnn  opencv_core opencv_imgproc opencv_imgcodecs)
target_link_libraries(face_recognition  kunFace dlib  opencv_dnn  opencv_core opencv_imgproc opencv_imgcodecs)
